--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -35,16 +35,8 @@ dependencies {
     implementation 'net.taptappun.taku.kobayashi:runtimepermissionchecker:1.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation (name:'speech-android-wrapper',ext:'aar')
-}
-
-
-repositories{
-    flatDir{
-        dirs 'libs'
-    }
 }
