--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             </intent-filter>
         </activity>
         <service android:name=".AudioService"/>
+        <receiver android:name=".HeadsetStateReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.HEADSET_PLUG"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
